Also track weak references

PR ld/15149
	* elflink.c (elf_link_add_object_symbols): Also track weak
	references.